[gd_scene load_steps=15 format=2]

[ext_resource path="res://plane.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/level1-bg-layer1.png" type="Texture2D" id=2]
[ext_resource path="res://level1.gd" type="Script" id=3]
[ext_resource path="res://assets/level1-cloud1.png" type="Texture2D" id=4]
[ext_resource path="res://assets/level1-cloud2.png" type="Texture2D" id=5]
[ext_resource path="res://assets/level1-bg-layer2.png" type="Texture2D" id=6]
[ext_resource path="res://assets/level1-bg-layer3.png" type="Texture2D" id=7]
[ext_resource path="res://assets/level1-bg-layer4.png" type="Texture2D" id=8]
[ext_resource path="res://assets/level1-bg-layer5.png" type="Texture2D" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 245, 54 )

[sub_resource type="FontFile" id=2]
font_path = "res://assets/kenvector_future_thin.ttf"

[sub_resource type="FontFile" id=3]
font_data = SubResource( 2 )

[sub_resource type="FontFile" id=4]
font_path = "res://assets/kenvector_future_thin.ttf"

[sub_resource type="FontFile" id=5]
font_data = SubResource( 4 )

[node name="level1" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="ParallaxBackground" parent="."]
scale = Vector2( 1, 0.56 )
transform = Transform2D( 1, 0, 0, 0.56, 0, 0 )

[node name="layer1" type="ParallaxLayer" parent="background"]

[node name="Sprite2D" type="Sprite2D" parent="background/layer1"]
texture = ExtResource( 2 )
centered = false

[node name="layer2" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2D" type="Sprite2D" parent="background/layer2"]
texture = ExtResource( 6 )
centered = false

[node name="cloud_layer1" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2D" type="Sprite2D" parent="background/cloud_layer1"]
position = Vector2( 400, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
centered = false

[node name="layer3" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2D" type="Sprite2D" parent="background/layer3"]
texture = ExtResource( 7 )
centered = false

[node name="cloud_layer2" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 1500, 0 )

[node name="Sprite2D" type="Sprite2D" parent="background/cloud_layer2"]
position = Vector2( 0, 300 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
centered = false

[node name="layer4" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2D" type="Sprite2D" parent="background/layer4"]
texture = ExtResource( 8 )
centered = false

[node name="layer5" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2D" type="Sprite2D" parent="background/layer5"]
texture = ExtResource( 9 )
centered = false

[node name="cloud_layer3" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 1500, 0 )

[node name="Sprite2D" type="Sprite2D" parent="background/cloud_layer3"]
position = Vector2( 0, 600 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 300, 0 )

[node name="plane" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 300 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 190, 633 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 190, -39 )
shape = SubResource( 1 )

[node name="plane2_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="hotairbaloon_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="airship_timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="explosion_timer" type="Timer" parent="."]
one_shot = true

[node name="coin_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="score_label" type="RichTextLabel" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 40.0
scale = Vector2( 2, 2 )
clip_contents = false
theme_override_fonts/normal_font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore_label" type="RichTextLabel" parent="."]
offset_left = 700.0
offset_top = 20.0
offset_right = 900.0
offset_bottom = 40.0
scale = Vector2( 2, 2 )
clip_contents = false
theme_override_fonts/normal_font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clouds" type="Node2D" parent="."]
position = Vector2( 600, 100 )
scale = Vector2( 0.4, 0.4 )

[node name="cloud" type="Sprite2D" parent="clouds"]
position = Vector2( 571.984, 365.177 )
scale = Vector2( 0.3, 0.3 )
z_index = 2
texture = ExtResource( 4 )

[node name="cloud2" type="Sprite2D" parent="clouds"]
position = Vector2( 458.582, 140.384 )
scale = Vector2( 0.564819, 0.58409 )
texture = ExtResource( 5 )

[node name="cloud3" type="Sprite2D" parent="clouds"]
position = Vector2( 931.166, 269.882 )
scale = Vector2( 0.440437, 0.437711 )
z_index = 1
texture = ExtResource( 5 )

[node name="cloud4" type="Sprite2D" parent="clouds"]
position = Vector2( 772.117, 393.768 )
scale = Vector2( 0.242188, 0.228368 )
z_index = 3
texture = ExtResource( 4 )

[node name="cloud5" type="Sprite2D" parent="clouds"]
position = Vector2( 154.178, 353.971 )
scale = Vector2( 0.377369, 0.419025 )
texture = ExtResource( 5 )

[node name="cloud6" type="Sprite2D" parent="clouds"]
position = Vector2( 851.623, 440.878 )
scale = Vector2( 0.188168, 0.244617 )
z_index = 4
texture = ExtResource( 5 )
[connection signal="timeout" from="plane2_timer" to="." method="_on_plane2_timer_timeout"]
[connection signal="timeout" from="hotairbaloon_timer" to="." method="_on_hotairbaloon_timer_timeout"]
[connection signal="timeout" from="airship_timer" to="." method="_on_airship_timer_timeout"]
[connection signal="timeout" from="explosion_timer" to="." method="_on_explosion_timer_timeout"]
[connection signal="timeout" from="coin_timer" to="." method="_on_coin_timer_timeout"]
